# RIPart

./: .gitignore  README.md  __init__.py  __main__.py  api.py  browser_tasks.py  clank.py  cli.py  cli_extractors.py  helpers.py  pyproject.toml  saucepan.py
common/: __init__.py  avatar.py  cards.py  creds.py  discord_bot.py  discord_forum.py  errors.py  lorebooks.py  tavern.py  text.py
providers/: __init__.py
providers/clank/: __init__.py  client.py  extract.py
providers/janitor/: __init__.py  browser_tasks.py  payloads.py
providers/saucepan/: __init__.py  client.py  extract.py  lorebook.py
providers/spicychat/: __init__.py  client.py  extract.py  leak.py
providers/tavern/: __init__.py  client.py
ripart/: api.py  cli.py  cli_extractors.py
ripart/common/: cards.py  creds.py  discord_bot.py  discord_forum.py  echo.py  env.py  http.py  lorebook_benchmark.py  lorebooks.py  storage.py  tavern.py
ripart/providers/: __init__.py
ripart/providers/chub/: __init__.py  client.py  extract.py
ripart/providers/clank/: __init__.py  client.py  echo.py  extract.py  lorebook.py  trpc.py
ripart/providers/janitor/: browser_tasks.py  payloads.py
ripart/providers/saucepan/: __init__.py  client.py  extract.py  fragments.py  leak.py
ripart/providers/spicychat/: __init__.py  client.py  extract.py  leak.py  read.py
ripart/providers/tavern/: client.py  extract.py
scripts/: leak_bench.py  spicychat_leak_bench.py
tests/: test_cards.py  test_clank_extract.py  test_cli_janitor.py  test_discord_bot.py  test_discord_forum.py  test_janitor_extract.py  test_janitor_lorebook_index.py  test_janitor_payloads.py  test_lorebook_benchmark.py  test_lorebook_library.py  test_open_providers.py  test_saucepan.py  test_storage.py
userscript/: main.userscript.js
wrangler/: main.js
