[project]
name = "ripart"
version = "0.1.0"
description = "RIPart - a browser-driven library and CLI to rip characters & lorebooks from JanitorAI and Saucepan."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "botasaurus>=4.0.97",
    "botasaurus-driver>=4.0.92",
    "rich-click>=1.9.8",
    "pillow>=10.4.0",
    # Saucepan REST client (pooled, retrying); brotli lets httpx decode `br`.
    "httpx>=0.27",
    "brotli>=1.1.0",
]

[project.optional-dependencies]
# Dev/test extras: `uv sync --extra dev` (or `pip install -e .[dev]`).
dev = ["pytest>=8"]

[project.scripts]
rip = "ripart.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

# Flat layout: the module files live directly in this directory, so map the
# `ripart` import package onto ".". This keeps the files where they are while
# still exposing a proper `ripart` package (needed by the relative imports and
# the `rip` entry point above).
[tool.setuptools]
packages = [
    "ripart",
    "ripart.common",
    "ripart.providers",
    "ripart.providers.janitor",
    "ripart.providers.saucepan",
    "ripart.providers.clank",
]

[tool.setuptools.package-dir]
ripart = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
# The tests import the installed `ripart` package (see the flat layout above);
# they can also be run without pytest: `python tests/test_saucepan.py`.
