[project]
name = "ripart"
version = "0.1.0"
description = "RIPart - a library and CLI to rip characters & lorebooks from JanitorAI (browser-driven), Saucepan, clank.world, and spicychat.ai."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "botasaurus>=4.0.97",
    "botasaurus-driver>=4.0.92",
    "rich-click>=1.9.8",
    "pillow>=10.4.0",
    # Saucepan REST client (pooled, retrying); brotli lets httpx decode `br`.
    "httpx>=0.27",
    "brotli>=1.1.0",
    "stopwordsiso>=0.6.1",
]

[project.optional-dependencies]
# Dev/test extras: `uv sync --extra dev` (or `pip install -e .[dev]`).
dev = ["pytest>=8"]
discord = ["discord.py>=2.4,<3"]

[project.scripts]
rip = "ripart.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ripart*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Tests import the installed `ripart` package from the explicit package directory.
